@@ -1,3 +1,7 @@
+2011-10-25  Andreas Schwab  <schwab@redhat.com>
+
+	* string/test-strchr.c (do_test): Don't generate NUL bytes.
+
 2011-10-25  Ulrich Drepper  <drepper@gmail.com>
 
 	* sysdeps/x86_64/fpu/math_private.h: Use VEX encoding when possible.
